syntax = "proto3";
package go.micro.api.user;

import "models.proto";

service UserServiceAPI {
	rpc UserLogin(UserLoginRequest) returns (UserLoginResponse);
}

message UserLoginRequest {
    string user_id = 1;
    string password = 2;
}

message UserLoginResponse {
    int32 code = 1;
    repeated User user = 2;
}

